<resources>
    <string name="app_name">Chemistry</string>
    <string name="waity">"Who am I to you?"</string>
    <string name="legal_warning">By signing up, you agree to our Terms and Privacy Policy</string>
    <string name="phone_btn_label">Get passcode</string>
    <string name="passcode_btn_label">Verify passcode</string>
    <string name="chemistry_picker_title">Send a chemistry anonymously</string>
    <string name="chemistry_picker_subtitle">See how fast your friend can identify you</string>
    <string name="chemistry_picker_btn_label">Start — ⏱ 00:00:00</string>
    <string name="enterPhoneNumber_hint">Enter phone number to sign in</string>
    <string name="getPasscodeBtn_speakable">Click to get passcode</string>
    <string name="enterPasscode_hint">Enter your 6 digit passcode</string>
    <string name="special_chemistries_label">Special Chemistries</string>
    <string name="other_chemistries_label">Other Chemistries</string>
    <string name="default_chemistry_icon">👋</string>
    <string name="default_chemistry_name">You\'re a friend</string>
    <string name="zero">0</string>
    <string name="anonChemistriesTitle">⏰ Identify your friends. They\'re watching the timer.</string>
    <string name="friendListTitle">Friends</string>
    <string name="contactListTitle">🔓 Send chemistries</string>
    <string name="default_name">John Alchemist</string>
    <string name="defaultPhoneNumber">1234567890</string>
    <string name="friendThumbnailHint_ImageView">Friend\'s picture</string>
    <string name="contact_thumbnail">Contact thumbnail</string>
    <string name="chemistry_count">0 of %d used</string>
    <string name="friend_instruction_text">Tap to see chemistry between you and %s</string>
    <string name="contact_instruction_text">What\'s your chemistry with %s</string>
    <string name="friends_title">Friends</string>
    <string name="logout_button">Logout</string>
    <string name="add_a_profile_picture">Add a profile picture</string>
    <string name="save_picture">Save picture</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="save_details">Save details</string>
    <string name="non_binary">Non-binary</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="sign_out">Sign out</string>
    <string name="activity">Activity</string>
    <string name="search">Search</string>
    <string name="contacts">Contacts</string>
    <string name="friends">Friends</string>
    <string name="anonymous">Anonymous</string>
    <string name="contacts_page_title">Contacts</string>
    <string name="identified_in_x">Identified in 2 mins 🔥🔥🔥</string>
    <string name="chemistries_sent_to_each_other">Chemistries sent to each other</string>
    <string name="from_friend_to_you">From Jane Metal to you</string>
    <string name="received_chemistry_default">🐼 I can never say no to you</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="search_hint">Find a contact to send chemistry</string>
    <string name="twilioSID">AC65716eaab3f4a67a7589833f48b66906</string>
    <string name="twilioAuthToken">2ac0e9947b6974ed8eca5e46cfe00b25</string>
    <string name="twilioPhoneNumber">+12763986041</string>
    <string name="edit_name_and_picture">Edit name and picture</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full name</string>
    <string name="save">Save</string>
    <string name="red_question_mark">❓</string>
    <string name="identify">Identify who sent this to you</string>
    <string name="anonymous_duration">It\'s been 2 days since you received this</string>
    <string name="solve_button">Solve</string>
    <string name="cheat_button">Cheat</string>
    <string name="solve_usage">0/1 used</string>
    <string name="cheat_usage">0/3 used</string>
    <string name="solve_instruction">Solve the name:</string>
</resources>