<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal"
    android:paddingHorizontal="20dp"
    android:background="@color/grey_3">

    <ImageView
        android:layout_gravity="center"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/locked_avatar"
        android:contentDescription="@string/contact_thumbnail" />

    <Space
        android:layout_width="8dp"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/contactName_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_name"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/waity_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_question_mark"
                android:textSize="16sp"
                android:textColor="@color/grey_30" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="6dp" />

        <TextView
            android:id="@+id/contactInstruction_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_chemistry_name"
            android:textSize="12sp"
            android:textColor="@color/grey_60" />

    </LinearLayout>

</LinearLayout>