<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ActivityMain">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/grey_3">

        <FrameLayout
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:layout_marginHorizontal="20dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/material_settings"
                tools:ignore="ContentDescription"
                app:tint="@color/grey_60" />

            <ImageButton
                android:id="@+id/signOut_Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:contentDescription="@string/search" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/contacts_page_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginHorizontal="20dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/material_group"
                tools:ignore="ContentDescription"
                app:tint="@color/black" />

            <ImageButton
                android:id="@+id/friends_Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:contentDescription="@string/friends_title" />

        </FrameLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/anonymousViewTitle_TextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="20dp"
        android:gravity="center_vertical"
        android:text="@string/anonChemistriesTitle"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@color/grey_8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/anonymous_RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/grey_3" />

    <TextView
        android:id="@+id/contactsViewTitle_TextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="20dp"
        android:gravity="center_vertical"
        android:text="@string/contactListTitle"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@color/grey_8" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/contactSearch_SearchView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:queryHint="@string/search_hint" />

    <ListView
        android:id="@+id/contacts_ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/grey_10"
        android:dividerHeight="1dp" />

</LinearLayout>