<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/grey_3">

    <com.chemistry.android.MaskedImageView
        android:id="@+id/userThumbnail_ImageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        app:maskPathData="M20,0 C7.615,0 0,7.615 0,20 C0,32.385 7.615,
        40 20,40 C32.385,40 40,32.385 40,20 C40,7.615 32.385,0 20,0 Z"
        android:background="@drawable/squircle"
        android:contentDescription="@string/add_a_profile_picture" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/fullName_EditText"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:hint="@string/full_name"
        android:textSize="16sp"
        android:autofillHints="name"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/save_Button"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:background="@color/purple_500"
        android:text="@string/save"
        android:textAllCaps="false"
        android:letterSpacing="0"
        android:textStyle="bold"
        android:textSize="16sp" />

</LinearLayout>