<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:background="@drawable/chemistry_card"
    android:orientation="vertical"
    android:paddingHorizontal="5dp"
    android:paddingTop="12dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/chemistryIcon_TextView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/default_chemistry_icon"
        android:textSize="36sp"
        android:textColor="@color/black" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/chemistryName_TextView"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:gravity="center"
            android:text="@string/default_chemistry_name"
            android:textSize="12sp"
            android:lineHeight="12sp"
            android:textColor="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="6dp" />

        <TextView
            android:id="@+id/chemistryCount_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="11sp"
            android:lineHeight="10dp"
            android:textColor="@color/grey_60" />

    </LinearLayout>

</LinearLayout>